@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - new attribute on Error and Result objects: "recommended_response",
+            for use when validating HTTP requests
 
 0.576     2023-12-10 06:10:57Z
           - the "stringy_numbers" feature now also applies to the "enum",
